--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - node-network
     environment:
       - VERDACCIO_PORT=4873
+      - VERDACCIO_PROTOCOL=https
     ports:
       - '4873:4873'
     volumes:
