first iteration, no npm lock files issues
Resolved failure on executing `npm ci`, it requires lock file.

in our case we should use clean install approach

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: 18
       - run: cd ${{ matrix.packages }}
-      - run: npm ci
+      - run: npm install # use npm ci only if available lock files
       - run: npm test
 
   publish-gpr:
@@ -38,7 +38,7 @@ jobs:
           node-version: 18
           registry-url: https://npm.pkg.github.com/
       - run: cd ${{ matrix.packages }}
-      - run: npm ci
+      - run: npm install # use npm ci only if available lock files
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
