attached be-genproto

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 # gitkeep file overrides other rules, and force to keep folder structure in git
 !**/.gitkeep
+
+# dependencies version lock file
+package-lock.json
