fix: ignore missing scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "diia-inhouse",
   "scripts": {
-    "build": "npm run build --ws"
+    "build": "npm run build --ws --if-present"
   },
   "workspaces": [
     "be-configs",
