--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "be-scaffold"]
 	path = be-scaffold
 	url = https://github.com/diia-open-source/be-scaffold.git
+[submodule "be-pkg-test"]
+	path = be-pkg-test
+	url = https://github.com/diia-open-source/be-pkg-test.git
