--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "be-pkg-errors"]
 	path = be-pkg-errors
 	url = https://github.com/diia-open-source/be-pkg-errors.git
+[submodule "be-pkg-validators"]
+	path = be-pkg-validators
+	url = https://github.com/diia-open-source/be-pkg-validators.git
