--- a/.gitmodules
+++ b/.gitmodules
@@ -1,72 +1,96 @@
 [submodule "be-configs"]
 	path = be-configs
 	url = https://github.com/diia-open-source/be-configs.git
+	ignore = untracked
 [submodule "be-eslint-plugin"]
 	path = be-eslint-plugin
 	url = https://github.com/diia-open-source/be-eslint-plugin.git
+	ignore = untracked
 [submodule "be-eslint-config"]
 	path = be-eslint-config
 	url = https://github.com/diia-open-source/be-eslint-config.git
+	ignore = untracked
 [submodule "be-genproto"]
 	path = be-genproto
 	url = https://github.com/diia-open-source/be-genproto.git
+	ignore = untracked
 [submodule "be-types"]
 	path = be-types
 	url = https://github.com/diia-open-source/be-types.git
+	ignore = untracked
 [submodule "be-scaffold"]
 	path = be-scaffold
 	url = https://github.com/diia-open-source/be-scaffold.git
+	ignore = untracked
 [submodule "be-pkg-test"]
 	path = be-pkg-test
 	url = https://github.com/diia-open-source/be-pkg-test.git
+	ignore = untracked
 [submodule "be-pkg-i18n"]
 	path = be-pkg-i18n
 	url = https://github.com/diia-open-source/be-pkg-i18n.git
+	ignore = untracked
 [submodule "be-pkg-errors"]
 	path = be-pkg-errors
 	url = https://github.com/diia-open-source/be-pkg-errors.git
+	ignore = untracked
 [submodule "be-pkg-validators"]
 	path = be-pkg-validators
 	url = https://github.com/diia-open-source/be-pkg-validators.git
+	ignore = untracked
 [submodule "be-pkg-utils"]
 	path = be-pkg-utils
 	url = https://github.com/diia-open-source/be-pkg-utils.git
+	ignore = untracked
 [submodule "be-pkg-http"]
 	path = be-pkg-http
 	url = https://github.com/diia-open-source/be-pkg-http.git
+	ignore = untracked
 [submodule "be-pkg-healthcheck"]
 	path = be-pkg-healthcheck
 	url = https://github.com/diia-open-source/be-pkg-healthcheck.git
+	ignore = untracked
 [submodule "be-diia-logger"]
 	path = be-diia-logger
 	url = https://github.com/diia-open-source/be-diia-logger.git
+	ignore = untracked
 [submodule "be-pkg-env"]
 	path = be-pkg-env
 	url = https://github.com/diia-open-source/be-pkg-env.git
+	ignore = untracked
 [submodule "be-pkg-crypto"]
 	path = be-pkg-crypto
 	url = https://github.com/diia-open-source/be-pkg-crypto.git
+	ignore = untracked
 [submodule "be-pkg-redis"]
 	path = be-pkg-redis
 	url = https://github.com/diia-open-source/be-pkg-redis.git
+	ignore = untracked
 [submodule "be-pkg-db"]
 	path = be-pkg-db
 	url = https://github.com/diia-open-source/be-pkg-db.git
+	ignore = untracked
 [submodule "be-pkg-cms"]
 	path = be-pkg-cms
 	url = https://github.com/diia-open-source/be-pkg-cms.git
+	ignore = untracked
 [submodule "be-pkg-analytics"]
 	path = be-pkg-analytics
 	url = https://github.com/diia-open-source/be-pkg-analytics.git
+	ignore = untracked
 [submodule "be-diia-metrics"]
 	path = be-diia-metrics
 	url = https://github.com/diia-open-source/be-diia-metrics.git
+	ignore = untracked
 [submodule "be-diia-queue"]
 	path = be-diia-queue
 	url = https://github.com/diia-open-source/be-diia-queue.git
+	ignore = untracked
 [submodule "be-pkg-providers"]
 	path = be-pkg-providers
 	url = https://github.com/diia-open-source/be-pkg-providers.git
+	ignore = untracked
 [submodule "be-diia-app"]
 	path = be-diia-app
 	url = https://github.com/diia-open-source/be-diia-app.git
+	ignore = untracked
