--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -44,7 +44,7 @@ strategy: &buildMatrix
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     <<: *buildMatrix
     steps:
       - uses: actions/checkout@v4
@@ -52,7 +52,7 @@ jobs:
           submodules: 'true'
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 18.19.1
           registry-url: https://npm.pkg.github.com/
           cache: 'npm'
       - name: Install dependencies and run tests
@@ -64,7 +64,7 @@ jobs:
 
   publish-gpr:
     needs: build
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -77,7 +77,7 @@ jobs:
           submodules: 'true'
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 18.19.1
           registry-url: https://npm.pkg.github.com/
           cache: 'npm'
       - name: Install dependencies and publish the package
