--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 # https://verdaccio.org/docs/authentication/
 
-registry=https://registry.dev:4873
+@diia-inhouse:registry=https://registry.dev:4873
