--- a/.gitmodules
+++ b/.gitmodules
@@ -102,3 +102,18 @@
 	path = be-user-service
 	url = https://github.com/diia-open-source/be-user-service.git
 	ignore = untracked
+[submodule "clients/be-public-service-catalog-client"]
+	path = clients/be-public-service-catalog-client
+	url = https://github.com/kant2002/be-public-service-catalog-client.git
+[submodule "clients/be-auth-service-client"]
+	path = clients/be-auth-service-client
+	url = https://github.com/kant2002/be-auth-service-client.git
+[submodule "clients/be-address-service-client"]
+	path = clients/be-address-service-client
+	url = https://github.com/kant2002/be-address-service-client.git
+[submodule "clients/be-analytics-service-client"]
+	path = clients/be-analytics-service-client
+	url = https://github.com/kant2002/be-analytics-service-client
+[submodule "clients/be-notification-service-client"]
+	path = clients/be-notification-service-client
+	url = https://github.com/kant2002/be-notification-service-client.git
