--- a/.submodules.json
+++ b/.submodules.json
@@ -78,8 +78,12 @@
   {
     "key": "be-eslint-config",
     "value": {
-      "branch": "origin/main",
+      "branch": "forked/ABIT-0001-resolved-too-strict-version-dependency-eslint-plugin",
       "remotes": [
+        {
+          "name": "forked",
+          "url": "git@github.com:OleksandrKucherenko/be-eslint-config.git"
+        },
         {
           "name": "origin",
           "url": "https://github.com/diia-open-source/be-eslint-config.git"
